@@ -172,8 +172,8 @@ public class PushMsHandler implements EventHandler {
     }
 
     private void handleNonCommonEvent(final Event e) {
-        // Just pass to topic
-        if (e.getTopic().startsWith("com/openexchange/push")) {
+        // Just pass to topic if not remotely received before
+        if (e.getTopic().startsWith("com/openexchange/push") && !Boolean.TRUE.equals(e.getProperty("__is12Remote"))) {
             try {
                 publishTopic.publish(toPojo(e));
             } catch (final RuntimeException ex) {
